Fixed wrong font size.

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -781,7 +781,6 @@ a:active      { color: #d2d2d2; text-decoration: underline; }
 /* Links for forum/topic lists */
 a.forumtitle {
     font-family: "Trebuchet MS", Helvetica, Arial, Sans-serif;
-    font-size: 1.2em;
     font-weight: bold;
     color: #898989;
     text-decoration: underline;
@@ -800,7 +799,6 @@ a.forumtitle:active {
 
 a.topictitle {
     font-family: "Trebuchet MS", Helvetica, Arial, Sans-serif;
-    font-size: 1.2em;
     font-weight: bold;
     color: #898989;
     text-decoration: underline;
